--- a/lab1.css
+++ b/lab1.css
@@ -15,7 +15,7 @@ div{
 .sticky{
     background: rgb(23, 30, 40);
     width: 100%;
-    height: 80px;
+    height: 60px;
     border: 0;
     padding: 0;
     margin: 0;
@@ -25,10 +25,71 @@ div{
     color: white;
 }
 
+.search{
+    background: rgb(35,44,61);
+    border: none;
+    width: 270px;
+    height: 25px;
+    margin-left: 400px;
+    margin-top: 15px;
+    border-radius: 7px;
+    color: #9ca0a7;
+    font:inherit;
+}
+
+.lupitapls{
+    background: rgb(35,44,61);
+    width: 28px;
+    height: 28px;
+    margin-left: -8px;
+    opacity: .8;
+    margin-top: 15px;
+    border-radius: 7px;
+}
+
+.lupitapls:hover{
+    opacity: 1;
+    background: rgb(100,150,250)
+}
+
+.lupita{
+    width: 20px;
+    margin-left: 3px;
+    margin-top: 3px;
+    height: 20px;
+}
+
+.button0{
+    border-radius: 6px;
+    border: none;
+    background: #309460;
+    font: inherit;
+    color: white;
+    height: 35px;
+    font-size: 85%;
+    margin-left: 15px;
+    margin-top: 13px;
+    transition: 0.5s;
+    opacity: 0.85;
+}
+
+.button0:hover{
+    opacity: 1;
+}
+
+.sign{
+    margin-left: 20px;
+}
+
 .azulo{
     background: rgb(30, 38, 51);
     width: 100%;
     height: 650px;
+}
+
+.amigable{
+    box-sizing: border-box;
+    float: left;
 }
 
 .compinche{
@@ -41,8 +102,8 @@ div{
 .title{
     color: white;
     margin-bottom: none;
-    margin-top: 100px;
-    margin-left: 50px;
+    margin-top: 130px;
+    margin-left: 80px;
     font-size: 45px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -50,7 +111,7 @@ div{
 .sub{
     color: rgb(77, 83, 97);
     margin-top: 10;
-    margin-left: 50px;
+    margin-left: 80px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -68,15 +129,12 @@ button{
     height: 50px;
     color: white;
     margin-top: 60px;
-    margin-left: 50px;
+    margin-left: 80px;
     transition: 0.5s;
 }
 
 .button1:hover{
-    width: 265px;
-    height: 65px;
-    margin-top: 52.5px;
-    margin-left: 42.5px;
+    transform: scale(1.05);
     font-size: 100%;
 }
 
@@ -84,7 +142,7 @@ button{
     width: 450px;
     height: auto;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-left: 100px;
+    margin-left: 70px;
     margin-top: 50px;
     transition: 0.5s;
 }
@@ -116,11 +174,31 @@ button{
 .lista{
     box-sizing: border-box;
     float: left;
-    width: 60%;
-    height: 90%;
-    margin-left: 30px;
+    width: 50%;
+    height: 95%;
+    margin-left: 160px;
     margin-top: 40px;
     background: white;
+    transition: 0.5s;
+}
+
+.lista:hover{
+    transform: scale(1.05);
+}
+
+.listar{
+    box-sizing: border-box;
+    float: left;
+    width: 50%;
+    height: 95%;
+    margin-left: 10px;
+    margin-top: 40px;
+    background: white;
+    transition: 0.5s;
+}
+
+.listar:hover{
+    transform: scale(1.05);
 }
 
 .info{
@@ -132,4 +210,100 @@ button{
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 20px;
+}
+
+.liimg{
+    margin-top: 30px;
+    margin-left: 60px;
+    width: 25%;
+    height: auto;
+}
+
+.lip{
+    margin-top: 10px;
+    text-align: center;
+}
+
+.mensaje{
+    background: white;
+    width: 95%;
+    height: 350px;
+    margin-left: 35px;
+    margin-top: 150px;
+}
+
+.imgm{
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.vivencia{
+    width: 60%;
+    height: 80px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.text2{
+    margin-top: 40px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+
+.persona{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.roundimg{
+    border-radius: 50%;
+    width: 50px;
+    margin-left: 40%;
+    box-sizing: border-box;
+    float: left;
+}
+
+.finalwhite{
+    margin-top: 100px;
+}
+
+.learnnew{
+    margin-left: 70px; 
+}
+
+.button3{
+    background: #309460; 
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 95%;
+    border: none;
+    width: 250px;
+    height: 50px;
+    color: white;
+    margin-top: 30px;
+    margin-left: 70px;
+    transition: 0.5s;
+}
+
+.button3:hover{
+    transform: scale(1.1);
+}
+
+.azulofinal{
+    width: 90%;
+    height: 80%;
+    margin-left: 65px;
+}
+
+.compinche3{
+    box-sizing: border-box;
+    float: left;
+    width: 25%;
+    height: 80%;
+    background: lightseagreen;
 }
